fixed scrollbar

--- a/static/styles/palette.css
+++ b/static/styles/palette.css
@@ -1,37 +1,32 @@
-.color-palette
-{
+.color-palette {
     box-sizing: border-box;
     position: fixed;
     bottom: -100px;
     width: 100%;
-    height: 80px; 
+    height: 95px;
     background-color: #fff;
-    box-shadow: 0px -2px 4px 0px #333; 
+    box-shadow: 0px -2px 4px 0px #333;
     display: flex;
     overflow-x: scroll; 
-    overflow-y: hidden; 
-    white-space: nowrap; 
-    padding: 10px 0; 
+    overflow-y: hidden;
+    white-space: nowrap;
+    padding: 10px 5px 0px 5px; 
     transition: bottom 0.3s ease-in-out;
 }
-.colors
-{
-    flex: 0 0 60px; 
+
+.colors {
+    flex: 0 0 60px;
     height: 60px;
-    margin: 0 5px; 
+    margin: 0 5px;
     box-shadow: inset 0px 0px 3px 0px #333;
     transition: transform 0.3s ease;
     cursor: pointer;
 }
-.colors:hover
-{
-    transform: scale(1.1); 
+
+.colors:hover {
+    transform: scale(1.1);
 }
-::-webkit-scrollbar {
-    width: 0;  
-    height: 0;
-    background: transparent; 
-}
+
 .color-palette.active {
-    bottom: 0; 
+    bottom: 0;
 }
